# physics_playground

./: Cargo.toml  README.md  cspell.json  physics.md  resolve_compliant_fixed_angle_constraints.asm
geometric_algebra/: Cargo.toml
geometric_algebra/src/: epga1d.glsl  epga1d.rs  epga2d.glsl  epga2d.rs  epga3d.glsl  epga3d.rs  hpga1d.glsl  hpga1d.rs  hpga2d.glsl  hpga2d.rs  hpga3d.glsl  hpga3d.rs  lib.rs  ppga1d.glsl  ppga1d.rs  ppga2d.glsl  ppga2d.rs  ppga3d.glsl  ppga3d.rs  simd.rs
src/: ga_g3.rs  ga_ganja.rs  ga_ppga3d.rs  main.rs  pga3d.rs  puffin_utils.rs  xpbd_particles.rs  xpbd_rigid_bodies.rs
